bin_PROGRAMS = zookeeperfuse		
zookeeperfuse_SOURCES = src/ZookeeperFuse.cpp\
                   src/ZooFile.cpp\
                   src/ZooFile.h\
                   src/ZookeeperFuseContext.cpp\
                   src/ZookeeperFuseContext.h\
                   src/logger/NativeLogger.cpp\
				   src/logger/Log4CPPLogger.cpp\
                   src/logger/Logger.h


