AC_INIT([zookeeper-fuse], 1.0)
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX

LT_INIT
AM_PROG_LIBTOOL
AC_PROG_LIBTOOL

AC_CONFIG_FILES(Makefile)

PKG_CHECK_MODULES(FUSE, fuse)

PKG_CHECK_MODULES(LOG4CPP, log4cpp,
  [AC_DEFINE(HAVE_LOG4CPP, 1)],1)

BOOST_REQUIRE([1.52.0])
BOOST_FILESYSTEM
BOOST_SYSTEM

CXXFLAGS="$FUSE_CFLAGS $CXXFLAGS $BOOST_CPPFLAGS"
LIBS="$FUSE_LIBS $LIBS $BOOST_FILESYSTEM_LIBS $BOOST_SYSTEM_LIBS $LOG4CPP_LIBS -lzookeeper_mt"
LDFLAGS="$BOOST_FILESYSTEM_LDFLAGS $BOOST_SYSTEM_LDFLAGS $LDFLAGS"

AC_OUTPUT
